# llm-error-correction-analysis

./: .gitignore  LICENSE  README.md  backup.py  pyproject.toml  requirements.txt
docs/: cursor_integration_guide_ja.md  gpu_setup_and_cursor_integration.md  testing_instructions_ja.md
src/: analysis_performance_by_pos_tag.py  comparison_figures.py  layer_ablation_analysis.py  layer_analysis.py  test_activation_analysis.py
src/data_generation/: generate_dataset.py  utils.py
src/model_analysis/: analyze_activations.py  model_utils.py
src/visualization/: __init__.py  visualize_activations.py
src/web_ui/: app.py  run.py
src/web_ui/static/js/: visualization.js
src/web_ui/templates/: index.html
wiki/: Home.md  インストールガイド.md  トラブルシューティング.md  プロジェクト概要.md  使用方法.md  研究手法.md  開発者ガイド.md
