[project]
name = "llm-error-correction-analysis"
version = "0.1.0"
description = "1つのトークンだけ異なる文ペアの活性化差分を分析するツール"
authors = [
    { name = "Maxel31", email = "sorutongeniune.31@gmail.com" }
]
dependencies = [
    "torch>=2.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "transformers>=4.50.0",
    "matplotlib>=3.10.1",
    "papermill>=2.6.0",
    "pandas>=2.2.3",
    "tuned-lens>=0.2.0",
    "kaleido>=0.2.1",
    "matplotlib-fontja>=1.0.1",
    "bitsandbytes>=0.45.5",
    "torchtext>=0.18.0",
    "datasets>=3.5.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "nltk>=3.9.1",
    "ace-tools>=0.0",
    "sentencepiece>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_error_correction_analysis"]
